Fixes extra spacing to right of page.

--- a/assets/scss/layouts/_pages.scss
+++ b/assets/scss/layouts/_pages.scss
@@ -128,7 +128,7 @@ p.meta {
   .features {
     background-color: #ffffff;
     color: #1d2d35;
-    padding: 5rem 0;
+    // padding: 5rem 0;
     .section-heading {
       font-size: 2.5rem;
       font-weight: 400;
